[project]
name = "Rag_agent"
version = "0.0.1"
description = "An agent that populates and enriches custom schemas"
authors = [
    { name = "José M. Vilches", email = "13333726+hinthornw@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "msgspec>=0.18.6",
    "chardet",
    "langchain-cohere>=0.2.4",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_retriever", "agent_sql"]

[tool.setuptools.package-dir]
"agent_retriever" = "src/agent_retriever"
"agent_sql" = "src/agent_sql"

[tool.setuptools.package-data]
"agent_retriever" = ["py.typed"]
"agent_sql" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
include = ["*.py", "*.pyi", "*.ipynb"]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
"ntbk/*" = ["D", "UP", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
